<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutAboutSharpCircles"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="10">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textAboutSharpCirclesId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeMaxTextSize="25sp"
            app:autoSizeStepGranularity="1sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textColor="@color/royal_blue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_weight="0.5"
            android:text="@string/about_sharp_circles" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <TextView
            android:id="@+id/textAboutSharpCirclesDescriptionId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeStepGranularity="1sp"
            android:layout_weight="1.2"
            android:layout_gravity="fill_horizontal"
            android:gravity="left"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:paddingRight="14dp"
            android:paddingEnd="14dp"
            android:text="@string/about_sharp_circles_description_text1" />
        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <TextView
            android:id="@+id/textAboutSharpCirclesDescriptionId2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeStepGranularity="1sp"
            android:layout_gravity="left"
            android:layout_weight="1.7"
            android:gravity="left"
            android:textAlignment="gravity"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            android:paddingRight="14dp"
            android:paddingEnd="14dp"
            android:text="@string/about_sharp_circles_text_body_part1" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

        <Button
            android:id="@+id/button_contact_us"
            android:text="@string/contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:textAllCaps="false"
            />
        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

        <Button
            android:id="@+id/button_free_seo_audit"
            android:text="@string/free_seo_audit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:textAllCaps="false"
            />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

        <Button
            android:id="@+id/button_seo_package"
            android:text="@string/seo_package"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:textAllCaps="false"

            />



</LinearLayout>
