<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_left"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_right"
            app:layout_constraintGuide_end="20dp"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/step_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingHorizontal="50dp"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_previous"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/step_id"
            android:layout_marginLeft="30dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_navigate_before_24"
            android:contentDescription="@string/previous"/>

        <ImageView
            android:id="@+id/img_next"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/step_id"
            android:layout_marginRight="30dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@id/step_id"
            android:adjustViewBounds="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_navigate_next_24"
            android:contentDescription="@string/next" />

        <TextView
            android:id="@+id/step_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/tip"
            android:textColor="@color/royal_blue"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_id" />

        <TextView
            android:id="@+id/step_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_tip" />

        <TextView
            android:id="@+id/step_why"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/why"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_description" />

        <TextView
            android:id="@+id/step_how"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/why"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_why" />

        <ImageView
            android:id="@+id/step_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/step_image"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/step_how" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/step_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_image"
            app:showFullScreenButton="false"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:showYouTubeButton="false" />

        <Button
            android:id="@+id/bt_previous"
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/step_video"
            android:layout_marginTop="30dp"
            android:text="Previous"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/bt_next"
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/step_video"
            android:layout_marginTop="30dp"
            android:text="Next"
            android:textAllCaps="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>